src/objects/Int_Asset__c.object
<CustomObject>
    <description>Int Asset</description>
    <fields>
        <fullName>Asset_Number__c</fullName>
        <description>Asset Number</description>
        <label>Asset Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Asset_Recording_Method_Code__c</fullName>
        <description>Asset Recording Method Code</description>
        <label>Asset Recording Method Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Source_System__c</fullName>
        <description>Asset Source System</description>
        <label>Asset Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Status_Code__c</fullName>
        <description>Asset Status Code</description>
        <label>Aset Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type_Number__c</fullName>
        <description>Asset Type Number</description>
        <label>Asset Type Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Asset Type</description>
        <label>Asset Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Global_Master_Asset_Type_Code__c</fullName>
        <description>Global Master Asset Type Code</description>
        <label>Global Master Asset Type Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Master_Asset_Type__c</fullName>
        <description>Global Master Asset Type</description>
        <label>Global Master Asset Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Book_Value__c</fullName>
        <description>Inventory Book Value</description>
        <label>Inventory Book Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inventory_Sale_Amount__c</fullName>
        <description>Inventory Sale Amount</description>
        <label>Inventory Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make_Number__c</fullName>
        <description>Make Number</description>
        <label>Make Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Make</description>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Year__c</fullName>
        <description>Manufacturing Year</description>
        <label>Manufacturing Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number__c</fullName>
        <description>Model Number</description>
        <label>Model Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model</description>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Units__c</fullName>
        <description>Number Of Units</description>
        <label>Number Of Units</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Category_Number__c</fullName>
        <description>Object Category Number</description>
        <label>Object Category Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Category__c</fullName>
        <description>Object Category</description>
        <label>Object Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orderly_Liquidation_Value__c</fullName>
        <description>Orderly Liquidation Value</description>
        <label>Orderly Liquidation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial Number</description>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_Indicator__c</fullName>
        <description>Used Indicator</description>
        <label>Used Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Int Asset</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Asset_Number__c</columns>
        <columns>Asset_Type__c</columns>
        <columns>Model__c</columns>
        <columns>Model_Number__c</columns>
        <columns>Make__c</columns>
        <columns>Make_Number__c</columns>
        <columns>Asset_Source_System__c</columns>
        <columns>Asset_Type_Number__c</columns>
        <columns>Asset_Status_Code__c</columns>
        <columns>Asset_Recording_Method_Code__c</columns>
        <columns>Global_Master_Asset_Type_Code__c</columns>
        <columns>Inventory_Book_Value__c</columns>
        <columns>Inventory_Sale_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AST-{0000000000}</displayFormat>
        <label>Asset Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>